--- a/project1/style.css
+++ b/project1/style.css
@@ -6,3 +6,11 @@ body{
     box-sizing :border-box;
 }
 
+#notebook>*{
+    float: left;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    flex:auto 0 0;
+    
+}
