--- a/project1/style.css
+++ b/project1/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     font-family: sans-serif;
     font-size: 16px;
     height: 100%;
@@ -147,4 +147,66 @@ body {
   h4 {
     font-size: 1.1em;
     font-weight: normal;
+  } */
+
+  *::after,
+  *::before{
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+  }
+  html{
+    font-size: 100%;
+  }
+  body{
+     box-sizing: border-box;
+     font-family: 'Lato',sans-serif;
+     font-weight:400;
+     line-height:1.7;
+     color:#777;
+     height: 100vh;
+  }
+
+  .row{
+    height: 100vh;
+  }
+  .col{
+    margin: 0;
+    padding: 0;
+  }
+  .toolbar{
+    text-align: center;
+  }
+  .btn-add-note{
+    
+    height: 75px;
+    width: 75px;
+    border-radius: 50%;
+  }
+  .note-list{
+    height: 100%;
+  }
+
+  .status-bar{
+    margin-bottom: 0;
+    float: left;
+  }
+  .main{
+    height: 80vh;
+  }
+  textarea{
+    width:100%;
+    height:100%; 
+    resize: none;
+    border: none;
+    box-sizing: border-box;
+    border-bottom: 1px solid black;
+    outline: none;
+  }
+  .preview-main{
+    padding: 10px;
+  }
+
+  .preview-lable{
+    text-align: center;
   }
