--- a/project2/transition.css
+++ b/project2/transition.css
@@ -43,18 +43,28 @@
 }
 
 .card-leave-active {
-/* We need different timings for the leave transition */
-transition: all 1s, opacity .5s .5s;
-/* Keep it in the same horizontal position */
-position: absolute !important;
-/* Make it painted over the other cards */
-z-index: 10;
-/* Unclickable during the transition */
-pointer-events: none;
+    /* We need different timings for the leave transition */
+    transition: all 1s, opacity .5s .5s;
+    /* Keep it in the same horizontal position */
+    position: absolute !important;
+    /* Make it painted over the other cards */
+    z-index: 10;
+    /* Unclickable during the transition */
+    pointer-events: none;
 }
 
 .card-leave-to {
     opacity: 0;
     /* Zoom the card upwards */
     transform: translateX(-106px) translateY(-300px) scale(1.5);
-    }
+}
+
+.zoom-enter-active,
+.zoom-leave-active {
+    transition: opacity .3s, transform .3s;
+}
+.zoom-enter,
+.zoom-leave-to {
+    opacity: 0;
+    transform: scale(.7);
+}
